--- a/basic/xhr.html
+++ b/basic/xhr.html
@@ -1,8 +1,10 @@
 <html lang="en">
-  <head>
+
+<head>
     <title>XHR</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <button id="syncBtn">同步</button>
     <button id="asyncBtn">非同步</button>
     <button id="countBtn">測試按鈕</button>
@@ -10,18 +12,49 @@
     <div id="response">準備要顯示訊息</div>
 
     <script>
-      var response = document.getElementById("response");
-      var syncBtn = document.getElementById("syncBtn");
-      syncBtn.addEventListener("click", function () {});
+        var response = document.getElementById("response");
+        var syncBtn = document.getElementById("syncBtn");
+        syncBtn.addEventListener("click", function () {
+            // 同步測試
+            response.innerHTML = "star同步"
+            var xhr = new XMLHttpRequest();
+            xhr.onload = function () {
+                if (this.status === 200) {
+                    response.innerHTML = `同步response: ${this.responseText}`;
+                }
+                else {
+                    response.innerHTML = `同步error: ${this.status}`;
+                }
+            };
+            //method, url, async(default true 非同步)
+            xhr.open("GET", "http://18.237.113.31:3000/", false);
+            xhr.send();
+        });
 
-      var asyncBtn = document.getElementById("asyncBtn");
-      asyncBtn.addEventListener("click", function () {});
+        var asyncBtn = document.getElementById("asyncBtn");
+        asyncBtn.addEventListener("click", function () {
+            // 不同步測試
+            response.innerHTML = "star同步"
+            var xhr = new XMLHttpRequest();
+            xhr.onload = function () {
+                if (this.status === 200) {
+                    response.innerHTML = `非同步response: ${this.responseText}`;
+                }
+                else {
+                    response.innerHTML = `非同步error: ${this.status}`;
+                }
+            };
+            //method, url, async(default true 非同步)
+            xhr.open("GET", "http://18.237.113.31:3000/", true);
+            xhr.send();
+        });
 
-      var countBtn = document.getElementById("countBtn");
-      var count = document.getElementById("count");
-      countBtn.addEventListener("click", function () {
-        count.innerHTML = parseInt(count.innerHTML, 10) + 1;
-      });
+        var countBtn = document.getElementById("countBtn");
+        var count = document.getElementById("count");
+        countBtn.addEventListener("click", function () {
+            count.innerHTML = parseInt(count.innerHTML, 10) + 1;
+        });
     </script>
-  </body>
+</body>
+
 </html>
